# lec_optimization

./: .gitignore  README.md  pyproject.toml
src/: test.py  test_q1.py  test_q2.py
